2006-07-25  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: New ns_proxy commands: send,wait,recv
	* nsproxy/ns_prox.man:  Added [ns_proxy send,wait,recv]
	* tests/ns_proxy.test:  Adjusted tests

	* include/ns.h:         Added ns_poll() wrapper which defaults 
	* include/nsthread.h:   to the platform implementation of
	* nsd/driver.c:         poll() except on Darwin where our own
	* nsd/nsd.h:            implmenentation is used. Replaced all
	* nsd/nswin32.c:        internal uses of poll() with ns_poll().
	* nsd/sock.c:
	* nsd/sockcallback.c:
	* nsd/unix.c:
	* configure.in:

2006-07-22  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsthread/pthread.c: Added definition of PTHREAD_STACK_MIN
	for Solaris.

2006-07-21  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/file.tcl: Use wrapped Tcl proc aroun d.tcl file instead of
	not exactly as needed global ns_cache.

2006-07-17  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/dns.c: Make sure given ttl and timeout are saved and used by dns cache

2006-07-17  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_log.test: Adjusted tests for new syntax
	of the ns_logctl command.

2006-07-13  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/driver.c: Make sure upload stats lock is always unlocked.

	* nsd/nsconf.c:
	* nsthread/thread.c:
	* nsthread/pthread.c: Don't enforce an upper bound on the stack
	size, use the OS provided default.  It only makes sense to
	*reduce* the size of the stack if you have many threads and you
	know for sure you have low stack usage.  As this is (currently) a
	process-wide setting, you never can be sure...

	* nsd/cookies.c: Fix bug with missing path when setting cookies.
	* tests/cookies.test: Add tests so this doesn't happen again...

2006-07-13  Bernd Eidenschink  <eide@users.sourceforge.net>

	* nsd/return.c: Workaround in function ReturnCharData: mark
	connection to return in chunked encoding when the output encoding
	is not default UTF-8.
